--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ author:
   medium           : # URL
   pinterest        : # Username
   soundcloud       : # Username
-  steam            : "happymic"
+  steam            : "1420068760"
   telegram         : # URL
   tumblr           : # Username
   twitter          : # Username
